day-17/netpol/primeira.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: primeira
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
  - from:
    - podSelector: {}
