day-17/netpol/segunda.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: segunda
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
          - key: kubernetes.io/metadata.name
            operator: In
            values: ["traefik", "giropops"]
    #     matchLabels:
    #       kubernetes.io/metadata.name: giropops
    # - namespaceSelector:
    #     matchLabels:
    #       kubernetes.io/metadata.name: traefik
